--- a/app/styles/glide-container.scss
+++ b/app/styles/glide-container.scss
@@ -5,7 +5,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: black;
 }
 .GlideContainer {
-  color: blue;
+  color: white;
 }
