Initialise horizontal slider

--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -1,3 +1,20 @@
-<div class="GlideContainer">
-  Hello
+<div class="GlideContainer" {{did-insert this.onLoad}}>
+  <div class="glide HorizontalGlider">
+    <div class="glide__track" data-glide-el="track">
+      <ul class="glide__slides">
+        <li class="glide__slide">Slide 0</li>
+        <li class="glide__slide">Slide 1</li>
+        <li class="glide__slide">Slide 2</li>
+      </ul>
+    </div>
+    <div class="glide__arrows" data-glide-el="controls">
+      <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<">
+        prev
+      </button>
+      <button type="button" class="glide__arrow glide__arrow--right"
+        data-glide-dir=">">
+        next
+      </button>
+    </div>
+  </div>
 </div>
