--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -1,5 +1,6 @@
 <div class="GlideContainer" {{did-insert this.onLoad}}>
-  <div class="glide HorizontalGlider">
+  <div class="glide GlideHorizontalGlider">
+    <div class="GlideHorizontalGlider__header">Glide js</div>
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
         <li class="glide__slide">Slide 0</li>
