Initialise keen slider

--- a/app/styles/glide-container.scss
+++ b/app/styles/glide-container.scss
@@ -23,8 +23,13 @@ body {
   padding: 18px;
 }
 .GlideHorizontalGlider {
+  margin-bottom: 42px;
   &__header {
     font-size: 24px;
     font-weight: 600;
   }
+}
+.KeenSliderHeader {
+  font-size: 24px;
+  font-weight: 600;
 }
