--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -18,4 +18,15 @@
       </button>
     </div>
   </div>
+  <div>
+    <div class="KeenSliderHeader">Keen-slider js</div>
+    <div id="my-keen-slider" class="keen-slider KeenHorizontalGlider">
+      <div class="keen-slider__slide number-slide1">1</div>
+      <div class="keen-slider__slide number-slide2">2</div>
+      <div class="keen-slider__slide number-slide3">3</div>
+      <div class="keen-slider__slide number-slide4">4</div>
+      <div class="keen-slider__slide number-slide5">5</div>
+      <div class="keen-slider__slide number-slide6">6</div>
+    </div>
+  </div>
 </div>
