--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,3 @@
 @import 'glide-container.scss';
 @import 'node_modules/@glidejs/glide/src/assets/sass/glide.core';
+@import 'node_modules/keen-slider/keen-slider.scss';
