--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -18,8 +18,8 @@
       </button>
     </div>
   </div>
-  <div>
-    <div class="KeenSliderHeader">Keen-slider js</div>
+  <div class="KeenSlider">
+    <div class="KeenSlider__header">Keen-slider js</div>
     <div id="my-keen-slider" class="keen-slider KeenHorizontalGlider">
       <div class="keen-slider__slide number-slide1">1</div>
       <div class="keen-slider__slide number-slide2">2</div>
