Add vertical slide

--- a/app/styles/glide-container.scss
+++ b/app/styles/glide-container.scss
@@ -41,6 +41,16 @@ body {
     font-weight: 600;
   }
 }
+.KeenHorizontalSlider {
+  &.keen-slider {
+    margin-bottom: 42px;
+  }
+}
+.KeenVerticalGlider {
+  &.keen-slider {
+    height: 300px;
+  }
+}
 .keen-slider__slide {
   display: flex;
   align-items: center;
