Combine glide js and kleen js

--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -1,11 +1,29 @@
 <div class="GlideContainer" {{did-insert this.onLoad}}>
   <div class="glide GlideHorizontalGlider">
-    <div class="GlideHorizontalGlider__header">Glide js</div>
+    <div class="GlideHorizontalGlider__header">Glide js with Kleen-slider</div>
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
-        <li class="glide__slide">Slide 0</li>
-        <li class="glide__slide">Slide 1</li>
-        <li class="glide__slide">Slide 2</li>
+        <li class="glide__slide number-slide1">
+          <div class="keen-slider KeenVerticalGlider KeenVerticalGlider-1">
+            <div class="keen-slider__slide">1.0</div>
+            <div class="keen-slider__slide">1.1</div>
+            <div class="keen-slider__slide">1.2</div>
+          </div>
+        </li>
+        <li class="glide__slide number-slide2">
+          <div class="keen-slider KeenVerticalGlider KeenVerticalGlider-2">
+            <div class="keen-slider__slide">2.0</div>
+            <div class="keen-slider__slide">2.1</div>
+            <div class="keen-slider__slide">2.2</div>
+          </div>
+        </li>
+        <li class="glide__slide number-slide3">
+          <div class="keen-slider KeenVerticalGlider KeenVerticalGlider-3">
+            <div class="keen-slider__slide">3.0</div>
+            <div class="keen-slider__slide">3.1</div>
+            <div class="keen-slider__slide">3.2</div>
+          </div>
+        </li>
       </ul>
     </div>
     <div class="glide__arrows" data-glide-el="controls">
@@ -16,25 +34,6 @@
         data-glide-dir=">">
         next
       </button>
-    </div>
-  </div>
-  <div class="KeenSlider">
-    <div class="KeenSlider__header">Keen-slider js</div>
-    <div class="keen-slider KeenHorizontalGlider">
-      <div class="keen-slider__slide number-slide1">1</div>
-      <div class="keen-slider__slide number-slide2">2</div>
-      <div class="keen-slider__slide number-slide3">3</div>
-      <div class="keen-slider__slide number-slide4">4</div>
-      <div class="keen-slider__slide number-slide5">5</div>
-      <div class="keen-slider__slide number-slide6">6</div>
-    </div>
-    <div class="keen-slider KeenVerticalGlider">
-      <div class="keen-slider__slide number-slide1">1</div>
-      <div class="keen-slider__slide number-slide2">2</div>
-      <div class="keen-slider__slide number-slide3">3</div>
-      <div class="keen-slider__slide number-slide4">4</div>
-      <div class="keen-slider__slide number-slide5">5</div>
-      <div class="keen-slider__slide number-slide6">6</div>
     </div>
   </div>
 </div>
