--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -28,11 +28,11 @@
     </div>
     <div class="glide__arrows" data-glide-el="controls">
       <button type="button" class="glide__arrow glide__arrow--left" data-glide-dir="<">
-        prev
+        Previous Slide
       </button>
       <button type="button" class="glide__arrow glide__arrow--right"
         data-glide-dir=">">
-        next
+        Next Slide
       </button>
     </div>
   </div>
