--- a/app/styles/glide-container.scss
+++ b/app/styles/glide-container.scss
@@ -23,11 +23,33 @@ body {
   padding: 18px;
 }
 .GlideHorizontalGlider {
-  margin-bottom: 42px;
   border-radius: 8px;
   &__header {
     font-size: 24px;
     font-weight: 600;
+  }
+}
+.glide__arrows {
+  position: absolute;
+  top: 50%;
+  .glide__arrow {
+    cursor: pointer;
+    min-width: 80px;
+    position: absolute;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    background-color: #a0a0a0;
+    &:hover {
+      background-color: #808080;
+    }
+  }
+  .glide__arrow--left {
+    right: 68px;
+  }
+  .glide__arrow--right {
+    left: 468px;
   }
 }
 .KeenSlider {
