--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -1,6 +1,8 @@
+<div class="GlideHeader">
+  Glide js with Kleen-slider
+</div>
 <div class="GlideContainer" {{did-insert this.onLoad}}>
   <div class="glide GlideHorizontalGlider">
-    <div class="GlideHorizontalGlider__header">Glide js with Kleen-slider</div>
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
         <li class="glide__slide number-slide1">
@@ -33,6 +35,12 @@
       <button type="button" class="glide__arrow glide__arrow--right"
         data-glide-dir=">">
         Next Slide
+      </button>
+      <button type="button" class="glide__arrow glide__arrow--up">
+        Previous Sub-Slide
+      </button>
+      <button type="button" class="glide__arrow glide__arrow--down">
+        Next Sub-Slide
       </button>
     </div>
   </div>
