--- a/app/styles/glide-container.scss
+++ b/app/styles/glide-container.scss
@@ -3,9 +3,9 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
 }
 .glide {
   display: flex; //Important as we want the individual sliders to fill up the glide container; all child elements would be shown in first slide without it
@@ -15,19 +15,18 @@ body {
     margin: 32px 0;
   }
 }
+.GlideHeader {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 42px;
+  color: #002240;
+}
 .GlideContainer {
-  color: white;
   width: 400px;
-  background-color: #002240;
   border-radius: 8px;
-  padding: 18px;
 }
 .GlideHorizontalGlider {
   border-radius: 8px;
-  &__header {
-    font-size: 24px;
-    font-weight: 600;
-  }
 }
 .glide__arrows {
   position: absolute;
@@ -40,16 +39,27 @@ body {
     border-radius: 4px;
     border: none;
     outline: none;
-    background-color: #a0a0a0;
+    background-color: #e1eaf2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
     &:hover {
-      background-color: #808080;
+      background-color: #a0a0a0;
     }
   }
   .glide__arrow--left {
     right: 68px;
+    top: -14px;
   }
   .glide__arrow--right {
     left: 468px;
+    top: -14px;
+  }
+  .glide__arrow--up {
+    min-width: 400px;
+    bottom: 165px;
+  }
+  .glide__arrow--down {
+    min-width: 400px;
+    top: 165px;
   }
 }
 .KeenSlider {
