Add keyboard shortcuts

--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -36,10 +36,10 @@
         data-glide-dir=">">
         Next Slide
       </button>
-      <button type="button" class="glide__arrow glide__arrow--up">
+      <button type="button" class="glide__arrow glide__arrow--up" data-arrow-down="0">
         Previous Sub-Slide
       </button>
-      <button type="button" class="glide__arrow glide__arrow--down">
+      <button type="button" class="glide__arrow glide__arrow--down" data-arrow-down="0">
         Next Sub-Slide
       </button>
     </div>
