Add refresh on horizontal change

--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -36,7 +36,7 @@
         data-glide-dir=">">
         Next Slide
       </button>
-      <button type="button" class="glide__arrow glide__arrow--up" data-arrow-down="0">
+      <button type="button" class="glide__arrow glide__arrow--up" data-arrow-up="0">
         Previous Sub-Slide
       </button>
       <button type="button" class="glide__arrow glide__arrow--down" data-arrow-down="0">
