Remove unnecessary data declaration

--- a/app/components/glide-container.hbs
+++ b/app/components/glide-container.hbs
@@ -24,10 +24,10 @@
         data-glide-dir=">">
         Next Slide
       </button>
-      <button type="button" class="glide__arrow glide__arrow--up" data-arrow-up="0">
+      <button type="button" class="glide__arrow glide__arrow--up">
         Previous Sub-Slide
       </button>
-      <button type="button" class="glide__arrow glide__arrow--down" data-arrow-down="0">
+      <button type="button" class="glide__arrow glide__arrow--down">
         Next Sub-Slide
       </button>
     </div>
