Separate scss files

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,7 @@
 @import 'glide-container.scss';
+@import 'number-slide.scss';
+@import 'keen-slider.scss';
+@import 'glide-arrows.scss';
+
 @import 'node_modules/@glidejs/glide/src/assets/sass/glide.core';
 @import 'node_modules/keen-slider/keen-slider.scss';
